# docs.20c.com

./: README.md  mkdocs.yml  pyproject.toml
docs/: VScode_quickstart.md  modernize.md  modernize_a_repo.md  port_py3.md
